[package]
name = "bxckup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = {version = "0.3.9", features = ["wincon"]}
toml = "0.5.8"
serde = "1.0.136"
serde_derive = "1.0.136"
walkdir = "2.3.2"
crc32fast = "1.3.2"